<resources>
    <string name="app_name">Hello World</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button_1">button 1</string>
    <string name="button_2">button 2</string>
    <string name="button_3">button 3</string>
    <string name="button_4">button 4</string>
    <string name="button_5">button 5</string>
    <string name="button_6">button 6</string>
    <string name="button_7">button 7</string>
    <string name="button_8">button 8</string>
    <string name="button_9">button 9</string>
    <string name="button_10">button 10</string>
    <string name="layout_title">Android pratice</string>
    <string name="constraint_title">Hello!</string>
    <string name="sign_up_button">Sign up</string>
    <string name="login_button">Login</string>
    <string name="username_input_hint">Username</string>
    <string name="password_input_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="connect">or connect with</string>
    <string name="sign_up">Sign Up with E-mail</string>
    <string name="activity_practices">Activity Practices</string>
    <string name="select_contract">Select Contract</string>
</resources>
