<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="148.9dp"
        android:layout_height="30.3dp"
        android:layout_marginTop="88dp"
        android:layout_marginHorizontal="113.1dp"
        android:src="@drawable/fill_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/input_text_width"
        android:layout_height="@dimen/input_text_height"
        android:layout_marginTop="77.7dp"
        android:layout_marginHorizontal="62.5dp"
        android:hint="@string/username_input_hint"
        android:textColor="@color/colorLightGray"
        android:textSize="@dimen/text_size"
        android:background="@drawable/edit_text_border"
        android:paddingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_text_height"
        android:hint="@string/password_input_hint"
        android:textColor="@color/colorLightGray"
        android:textSize="@dimen/text_size"
        android:background="@drawable/edit_text_border"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22.5dp"
        android:checked="true"
        android:buttonTint="@color/cardview_dark_background"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password" />

    <TextView
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorTextBlack"
        android:text="@string/remember_me"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="135.5dp"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkbox" />
    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorTextBlack"
        android:text="@string/forget_password"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkbox" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_text_height"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="22.5dp"
        android:backgroundTint="@color/colorBlue"
        android:background="@drawable/button_corner"
        app:layout_constraintTop_toBottomOf="@+id/remember_me"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintEnd_toEndOf="@+id/password" />

    <TextView
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26.5dp"
        android:layout_marginHorizontal="80.5dp"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorGray"
        android:text="@string/connect"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintEnd_toEndOf="@+id/login" />

    <ImageView
        android:id="@+id/fb_logo"
        android:layout_width="@dimen/fb_logo_height"
        android:layout_height="@dimen/input_text_height"
        android:src="@drawable/fb"
        android:layout_marginTop="29.5dp"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/connect" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="49.5dp"
        android:src="@drawable/tw"
        app:layout_constraintTop_toTopOf="@+id/fb_logo"
        app:layout_constraintBottom_toBottomOf="@+id/fb_logo"
        app:layout_constraintStart_toStartOf="@+id/connect"
        app:layout_constraintEnd_toEndOf="@+id/login" />

    <Button
        android:layout_width="0dp"
        android:layout_height="@dimen/input_text_height"
        android:layout_marginTop="85.5dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/text_size"
        android:textAllCaps="false"
        android:backgroundTintMode="screen"
        android:background="@drawable/button_corner"
        app:layout_constraintTop_toBottomOf="@+id/fb_logo"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintEnd_toEndOf="@+id/login" />

</androidx.constraintlayout.widget.ConstraintLayout>